--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               नमस्कार, प्रणाम ! जी मेरा नाम राम कुमार साह है।  मैं बाराशंकर गांव का निवासी हूँ।  आप सभी की कृपा से मैंने इस बार के चुनाव में क्षेत्र संख्या - ५१ पताही से जिला परिषद् के पद के लिए अपनी धर्म पत्नी का नामांकन कराया है।  बस मेरा आपसे यही अनुरोध है , की आप हमे अपना आशीर्वाद दे और आपका आशीर्वाद हम पर बने रहे।  
             </p>
             <div class="row">
-              <div class="col-lg-6">
+              <!-- <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
@@ -104,7 +104,7 @@
                 </ul>
               </div>
             </div>
-           
+            -->
           </div>
         </div>
 
@@ -118,17 +118,17 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>कुछ मिट्ठी यांदे </h2>
+        
         </div>
 
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter="*" class="filter-active">अगल - बगल </li>
+              <li data-filter=".filter-app">बाराशंकर</li>
+              <li data-filter=".filter-card"> पताही </li>
+              <li data-filter=".filter-web">गुजरात </li>
             </ul>
           </div>
         </div>
@@ -273,7 +273,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Testimonials</h2>
+          <h2>लोगो की राय </h2>
         </div>
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -378,7 +378,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>99XXXXXXX</p>
               </div>
 
             </div>
