--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1 style="color: magenta">विद्योत्तमा राम साह</h1>
-      <p>भावी जिला परिषद् प्रत्याशी - <span class="typed" data-typed-items="समाजसेवी, शिक्षित, कर्मठ, 
+      <h1 style="color: rgb(0, 132, 255)">विद्योत्तमा राम साह</h1>
+      <p style="color:rgb(0, 132, 255)">भावी जिला परिषद् प्रत्याशी - <span class="typed" data-typed-items="समाजसेवी, शिक्षित, कर्मठ, 
         और सुशील "></span></p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
