--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>विद्योत्तमा राम साह  - Barashankar</title>
+  <title>विद्योत्तमा राम साह  - भावी जिला परिषद् प्रत्याशी</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
